add test for Misc.disableHttpClientCertificateVerify()